Updated background style

--- a/WebPrototypes/index.html
+++ b/WebPrototypes/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html  class="lgc-gradient-primary  uk-height-1-1">
     <head>
         <title>WordZoo</title>
-        <link rel="stylesheet" href="css/uikit.min.css" />
+        <link rel="stylesheet" href="../../UIKitSources/uikit/dist/css/uikit.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
     </head>
-    <body>
-      <div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
+    <body class="uk-height-1-1">
+
+      <div class="uk-container uk-animation-scale-up uk-margin-large-bottom uk-margin-top ">
         <h1 class="uk-text-center uk-hidden">WordZoo</h1>
         <img src="res/logo.png" width="500" alt="WordZoo" class="uk-align-center" />
+      </div>
+
+
+      <div class="uk-container uk-container-small uk-background-muted uk-padding-large uk-margin-large-bottom uk-animation-scale-up ">
         <ul uk-tab uk-switcher class="uk-flex-center">
             <li class="uk-active"><a href="#">Student</a></li>
             <li><a href="#">Teacher</a></li>
@@ -66,5 +71,6 @@
           </li>
         </ul>
       </div>
+
     </body>
 </html>
