Lion FinishScreen + limited animations

--- a/Phaser/Lion/WebContent/index.html
+++ b/Phaser/Lion/WebContent/index.html
@@ -11,6 +11,8 @@
 <script src="js/Main.js"></script>
 <script src="assets/canvas/StartScreen.js"></script>
 <script src="assets/canvas/RulesScreen.js"></script>
+<script src="assets/canvas/PlayScreen.js"></script>
+<script src="assets/canvas/FinishScreen.js"></script>
 
 <style>
 body {
