--- a/WebPrototypes/index.html
+++ b/WebPrototypes/index.html
@@ -2,7 +2,7 @@
 <html  class="lgc-gradient-primary  uk-height-1-1">
     <head>
         <title>WordZoo</title>
-        <link rel="stylesheet" href="../../UIKitSources/uikit/dist/css/uikit.min.css" />
+        <link rel="stylesheet" href="css/uikit.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
