--- a/WebPrototypes/teacher_portal.html
+++ b/WebPrototypes/teacher_portal.html
@@ -15,16 +15,16 @@
           <ul class="uk-navbar-nav">
               <li class="uk-active"><a href="#">Home</a></li>
               <li>
-                  <a href="#">Item 2</a>
+                  <a href="#">Learn about Wordzoo</a>
                   <div class="uk-navbar-dropdown">
                       <ul class="uk-nav uk-navbar-dropdown-nav">
-                          <li class="uk-active"><a href="#">Item 1</a></li>
+                        <li class="uk-active"><a href="#">Item 1</a></li>
                           <li><a href="#">Item 2</a></li>
                           <li><a href="#">Item 3</a></li>
                       </ul>
                   </div>
               </li>
-              <li><a href="#">Item 3</a></li>
+              <li><a href="#">Teacher Signin</a></li>
           </ul>
 
       </div>
