Tutorial overlay screen + better class photo

--- a/Phaser/Class Photo/WebContent/index.html
+++ b/Phaser/Class Photo/WebContent/index.html
@@ -5,12 +5,11 @@
 <meta charset="UTF-8" />
 <meta name=viewport content="width=device-width, initial-scale=1">
 
-<title>Quiz</title>
+<title>Class Photo</title>
 
 <script src="lib/phaser.js"></script>
 <script src="js/Main.js"></script>
 <script src="assets/canvas/LoadingScreen.js"></script>
-<script src="assets/canvas/StartScreen.js"></script>
 <script src="assets/canvas/PlayScreen.js"></script>
 
 <style>
