--- a/Phaser/Class Photo/WebContent/index.html
+++ b/Phaser/Class Photo/WebContent/index.html
@@ -6,7 +6,7 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 
 <title>Class Photo</title>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" ></script>
 <script src="lib/phaser.js"></script>
 <script src="js/Main.js"></script>
 <script src="assets/canvas/LoadingScreen.js"></script>
@@ -19,7 +19,6 @@ body {
 	padding: 0;
 }
 </style>
-
 </head>
 <body>
 </body>
