Score balancing + bug fixing

--- a/Phaser/CustomCharacter/WebContent/index.html
+++ b/Phaser/CustomCharacter/WebContent/index.html
@@ -9,6 +9,7 @@
 
 <script src="lib/phaser.js"></script>
 <script src="js/Main.js"></script>
+<script src="assets/canvas/LoadingScreen.js"></script>
 <script src="assets/canvas/Level.js"></script>
 
 <style>
